--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-jest": "^27.3.1",
     "expo-module-scripts": "^2.0.0",
     "jest": "^27.3.1",
+    "standard-version": "^9.3.2",
     "ts-jest": "^27.0.7"
   }
 }
